[gd_scene load_steps=3 format=3 uid="uid://bqgyp1ip2dc01"]

[ext_resource type="Script" uid="uid://bx547u66vlnwn" path="res://script/MinimapGridOverlay.gd" id="1_nkwr6"]
[ext_resource type="Texture2D" uid="uid://cpgasfotq46cb" path="res://assets/ui/map vine.png" id="2_ayqj5"]

[node name="Minimap" type="Control"]
custom_minimum_size = Vector2(375, 375)
layout_mode = 3
anchors_preset = 0
offset_left = 50.0
offset_top = 50.0
offset_right = 425.0
offset_bottom = 425.0

[node name="MinimapGridOverlay" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -75.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-10, 0)
script = ExtResource("1_nkwr6")

[node name="MinimapBackground" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -75.0
offset_bottom = -75.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(-10, 1)

[node name="MinimapIcons" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="PlayerIcon" type="TextureRect" parent="MinimapIcons"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="NPCIcon" type="TextureRect" parent="MinimapIcons"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MapVine" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -47.0
offset_top = -52.0
offset_right = 209.0
offset_bottom = 204.0
texture = ExtResource("2_ayqj5")

[node name="MapVine2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 110.0
offset_top = 100.0
offset_right = 366.0
offset_bottom = 356.0
texture = ExtResource("2_ayqj5")
flip_h = true
flip_v = true
